[gd_scene load_steps=14 format=3 uid="uid://bdl3dlb4dh8hf"]

[ext_resource type="Texture2D" uid="uid://s4uinnfuv8hk" path="res://minigames/whack-a-stone/sprites/whack_a_stone_bg.png" id="1_xpqvx"]
[ext_resource type="Script" uid="uid://ba7bw547o47aq" path="res://minigames/whack-a-stone/scripts/whack_a_stone.gd" id="1_yvhvv"]
[ext_resource type="PackedScene" uid="uid://bchgmjyglkblk" path="res://minigames/whack-a-stone/scenes/hole.tscn" id="2_lierh"]
[ext_resource type="PackedScene" uid="uid://b33mke2lc2ns8" path="res://minigames/whack-a-stone/scenes/custom_cursor.tscn" id="3_frx08"]
[ext_resource type="Texture2D" uid="uid://dn7n3o4adfdkx" path="res://minigames/whack-a-stone/sprites/rock.png" id="5_wjk7y"]
[ext_resource type="Texture2D" uid="uid://csqaejk20l3oe" path="res://minigames/whack-a-stone/sprites/clock_icon.png" id="6_3j3pn"]
[ext_resource type="FontFile" uid="uid://cofv808qgpv2h" path="res://assets/fonts/Silkscreen-Regular.ttf" id="7_5ta4u"]
[ext_resource type="AudioStream" uid="uid://ban8gkssk0kas" path="res://assets/sound/music/caves_bgm.mp3" id="8_byk4f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3j3pn"]
bg_color = Color(0.06469653, 0.06469653, 0.06469653, 0.6117647)
border_width_left = 3
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_862u0"]
bg_color = Color(0.25337768, 0.3682766, 0.5256639, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id="Animation_x81cq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(792, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:theme_override_styles/panel:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.25337768, 0.3682766, 0.5256639, 1)]
}

[sub_resource type="Animation" id="Animation_vunvb"]
resource_name = "timer"
length = 30.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(792, 24), Vector2(0, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:theme_override_styles/panel:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 12.25, 30),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.25337768, 0.3682766, 0.5256639, 1), Color(0.25337768, 0.3682766, 0.5256639, 1), Color(0.7882353, 0.18039216, 0.19215687, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Holes/Hole")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(30),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_game"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6cgmm"]
_data = {
&"RESET": SubResource("Animation_x81cq"),
&"timer": SubResource("Animation_vunvb")
}

[node name="WhackAStone" type="CanvasLayer"]
process_mode = 3
layer = 100
offset = Vector2(640, 360)
transform = Transform2D(1, 0, 0, 1, 640, 360)
script = ExtResource("1_yvhvv")

[node name="Background" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background"]
scale = Vector2(4, 4)
texture = ExtResource("1_xpqvx")

[node name="Holes" type="Node2D" parent="."]

[node name="Hole" parent="Holes" instance=ExtResource("2_lierh")]
position = Vector2(211, 81)

[node name="Hole7" parent="Holes" instance=ExtResource("2_lierh")]
position = Vector2(410, -60)

[node name="Hole2" parent="Holes" instance=ExtResource("2_lierh")]
position = Vector2(-13, 236)

[node name="Hole10" parent="Holes" instance=ExtResource("2_lierh")]
position = Vector2(-218, 77)

[node name="Hole3" parent="Holes" instance=ExtResource("2_lierh")]
position = Vector2(320, 292)

[node name="Hole4" parent="Holes" instance=ExtResource("2_lierh")]
position = Vector2(559, 160)

[node name="Hole5" parent="Holes" instance=ExtResource("2_lierh")]
position = Vector2(-446, -56)

[node name="Hole11" parent="Holes" instance=ExtResource("2_lierh")]
position = Vector2(-587, 175)

[node name="Hole8" parent="Holes" instance=ExtResource("2_lierh")]
position = Vector2(-328, 315)

[node name="Hole6" parent="Holes" instance=ExtResource("2_lierh")]
position = Vector2(11, -91)

[node name="CustomCursor" parent="." instance=ExtResource("3_frx08")]
top_level = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HUD" type="Node2D" parent="."]
position = Vector2(80, 0)

[node name="Sprite2D" type="Sprite2D" parent="HUD"]
position = Vector2(338, -295)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_wjk7y")

[node name="Label" type="Label" parent="HUD"]
offset_left = 391.0
offset_top = -346.0
offset_right = 543.0
offset_bottom = -249.0
theme_override_font_sizes/font_size = 42
text = " "
vertical_alignment = 1

[node name="Sprite2D2" type="Sprite2D" parent="HUD"]
position = Vector2(-653, -299)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_3j3pn")

[node name="TimeBarContainer" type="Panel" parent="HUD"]
offset_left = -587.0
offset_top = -319.0
offset_right = 222.0
offset_bottom = -278.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3j3pn")

[node name="Panel" type="Panel" parent="HUD"]
offset_left = -579.0
offset_top = -310.0
offset_right = 213.0
offset_bottom = -286.0
pivot_offset = Vector2(0, 12)
theme_override_styles/panel = SubResource("StyleBoxFlat_862u0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
libraries = {
&"": SubResource("AnimationLibrary_6cgmm")
}
autoplay = "timer"

[node name="GameOverScreen" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
offset_left = -608.0
offset_top = -335.0
offset_right = 596.0
offset_bottom = 332.0
mouse_filter = 2
color = Color(0, 0, 0, 0.34509805)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 0
offset_left = 371.0
offset_top = 129.0
offset_right = 859.0
offset_bottom = 296.0
theme_override_fonts/font = ExtResource("7_5ta4u")
theme_override_font_sizes/font_size = 64
text = "RECOLECCION
TERMINADA"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="GameOverScreen"]
offset_left = -68.0
offset_top = 69.0
offset_right = 79.0
offset_bottom = 122.0
theme_override_fonts/font = ExtResource("7_5ta4u")
theme_override_font_sizes/font_size = 32
text = "VOLVER"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_byk4f")
volume_db = -12.0
autoplay = true

[connection signal="pressed" from="GameOverScreen/Button" to="." method="_on_button_pressed"]
